Bug#24568, NdbScanFilter NAND/NOR operations sometimes do not works as expected this patch is an absolutely necessary supplement of the previous patch, the previous patch doesnot cover isnull() and isnotnull() methods' effect.

ndb/src/ndbapi/NdbScanFilter.cpp:
  correct isnull() and isnotnull() when these two methods called in a NAND/NOR operation